# cardboard-counter

./: README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/release/: output-metadata.json
app/src/androidTest/java/com/clx/camerademo/myapplication222/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml  my-AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  com_example_opencv_MainActivity.h  com_example_opencv_my_MainActivity.h  native-lib.cpp
app/src/main/java/com/clx/camerademo/camera/: AnimSpring.java  AspectRatio.java  BitmapUtils.java  CameraPreview.java  OverCameraView.java  PermissionUtils.java  Size.java  SizeMap.java
app/src/main/java/com/clx/camerademo/myapplication222/: ApplicationConfig.java  CameraActivity.java  CropImageView.java  FloatDrawable.java  ImagePositionManager.java  MainActivity.java  ScaleMoveImageViewer.java  cut_Activity.java  my_MainActivity.java
app/src/main/res/layout/: activity_camre_layout.xml  activity_main.xml  cut_activity.xml  my_activity_main.xml
app/src/main/res/values/: strings.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: provider_paths.xml
app/src/test/java/com/clx/camerademo/myapplication222/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
opencv/libcxx_helper/: dummy.cpp
